--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,5 +15,6 @@
   <link rel="stylesheet" href="https://yui-s.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
   <!--<![endif]-->
   <link rel="stylesheet" href="{{ "/css/main.min.css" | absolute_url }}">
+  <script src="https://kit.fontawesome.com/6fed92b3c4.js"></script>
 </head>
 <body>
