--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
 	<div class="copyright">
         <p>
             &copy;{{ 'now' | date: "%Y" }} {{ site.title }} - All Rights Reserved<br>
-			<a href="{{ "/admin" | absolute_url }}">Site Admin</a>
+			<a href="{{ "https://app.cloudcannon.com/" | absolute_url }}" target="_blank">Site Admin</a>
 		</p>
 	</div>
 </footer>
