--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
 	</div>
 	<div class="copyright">
         <p>
-            &copy;{{ 'now' | date: "%Y" }} {{ site.title }} - All Rights Reserved<br>
+            &copy;{{ 'now' | date: "%Y" }} {{ site.title }} - All Rights Reserved
 			<a href="{{ "https://app.cloudcannon.com/" | absolute_url }}" target="_blank">Site Admin</a>
 		</p>
 	</div>
